# brc

./: Cargo.toml  LICENSE  main.py
src/: chunked_reading.rs  first_attemp_vec.rs  first_attempt.rs  first_attempt_alternative.rs  improved_file_read.rs  main.rs  multithreaded_manual.rs  multithreaded_rayon.rs  multithreaded_single_map.rs  prototyping.rs
