[package]
name = "brc"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
memmap2 = "0.9.4"
anyhow = "1.0.82"
bstr = "1.9.1"
rayon = "1.10.0"
hashbrown = "0.14.5"
